Emit debug warnings for illegal access during build